<resources>
    <string name="app_name">Medicines App</string>
    <string name="home_string">Home</string>
    <string name="cart_string">Cart</string>
    <string name="contact_string">Contact</string>
    <string name="header_title1_string">Medicines</string>
    <string name="header_title2_string">App</string>
    <string name="todo">TODO</string>
    <string name="price">Цена:</string>
    <string name="add_to_cart_text">Добавить\nв корзину</string>
    <string name="country">Страна:</string>
</resources>